# devops_helper

./: .devops-helper.example.yaml  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
devops_helper/: agent.py  config.py  dispatcher.py  main.py  mcp_manager.py  registry.py
devops_helper/ui/: console.py  repl.py
tests/: test_dispatcher.py  test_mcp_manager.py  test_registry.py
