[project]
name = "devops-helper"
version = "0.1.0"
description = "AI-powered DevOps CLI agent using Google Gemini and MCP servers"
requires-python = ">=3.12,<3.14"
dependencies = [
    "google-genai>=1.75.0,<2.0.0",
    "mcp[cli]>=1.9.0,<2.0.0",
    "rich>=13.9.0,<15.0.0",
    "prompt-toolkit>=3.0.48,<4.0.0",
    "pyyaml>=6.0.2,<7.0.0",
]

[project.scripts]
devops-helper = "devops_helper.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.25.0,<1.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "ruff>=0.9.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
